--- a/src/Illuminate/Exception/composer.json
+++ b/src/Illuminate/Exception/composer.json
@@ -9,6 +9,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
+        "filp/whoops": "1.1.*",
         "illuminate/support": "4.2.*",
         "symfony/debug": "2.5.*",
         "symfony/http-foundation": "2.5.*",
